--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9889
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/examl_6
+spring.datasource.url=jdbc:mysql://localhost:3306/minigram_db
 spring.datasource.username=root
 spring.datasource.password=
