--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port=9889
+
 spring.jpa.hibernate.ddl-auto=none
+spring.datasource.platform=mysql
+
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:import.sql
+
 spring.datasource.url=jdbc:mysql://localhost:3306/minigram_db
 spring.datasource.username=root
 spring.datasource.password=
