--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9889
 
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.platform=mysql
+#spring.datasource.platform=mysql
 
 spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath:import.sql
@@ -9,3 +9,5 @@ spring.datasource.schema=classpath:import.sql
 spring.datasource.url=jdbc:mysql://localhost:3306/minigram_db
 spring.datasource.username=root
 spring.datasource.password=
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
